--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
+  "main": "src/javascript/index.js",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
