--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo-list",
+  "main": "index.js",
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "version": "1.0.0",
@@ -8,11 +9,17 @@
     "parcel": "^2.0.0-rc.0"
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.4.1"
   },
   "scripts": {
     "start": "parcel",
-    "build": "parcel build",
+    "build": "rm -rf dist && parcel build src/index.html --public-url ./",
     "deploy": "gh-pages -d dist"
   },
   "author": "",
