--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "todo-list",
-  "main": "index.js",
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "version": "1.0.0",
@@ -20,7 +19,8 @@
   "scripts": {
     "start": "parcel",
     "build": "rm -rf dist && parcel build src/index.html --public-url ./",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint --fix"
   },
   "author": "",
   "license": "ISC",
